<?xml version="1.0"?>
<package format="2">
  <name>caster_moma_viz</name>
  <version>1.1.0</version>
  <description>The caster_moma_viz package</description>

  <maintainer email="ye@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/CasterLab/caster_moma_viz</url>
  <url type="repository">https://github.com/CasterLab/caster_moma_viz</url>
  <url type="bugtracker">https://github.com/CasterLab/caster_moma_viz/issues</url>

  <author email="ye@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rviz</depend>

  <export>
  </export>
</package>
